append functionality added.  Testing verified.
